--- a/index.html
+++ b/index.html
@@ -12,9 +12,22 @@
         h1{
             color: red;
         }
+        ul{
+            display: flex;
+            justify-content: space-evenly;
+            color: green;
+            font-weight: 800;
+            font-size: larger;
+        }
     </style>
 </head>
 <body>
     <h1>Janera Production house</h1>
+    <ul>
+        <li>Home</li>
+        <li>About Us</li>
+        <li>Contact Us</li>
+        <li>Services</li>
+    </ul>
 </body>
 </html>
