--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
         h1{
             color: red;
         }
+        p{
+            font-size: large;
+            color: aqua;
+            font-weight: 600;
+        }
     </style>
 </head>
 <body>
     <h1>Janera Production house</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto dignissimos odio ab eveniet necessitatibus perspiciatis id doloribus? Nesciunt mollitia quaerat, minima reprehenderit libero quas aperiam!
+    </p>
 </body>
 </html>
