--- a/index.html
+++ b/index.html
@@ -12,9 +12,31 @@
         h1{
             color: red;
         }
+        footer{
+            display: flex;
+           gap: 10px;
+           justify-content: center;
+           font-size: large;
+           font-weight: bolder;
+           text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <h1>Janera Production house</h1>
+    <footer>
+        <span>
+            Home
+        </span>
+        <span>
+About Us
+        </span>
+        <span>
+Contact Us
+        </span>
+        <span>
+Services
+        </span>
+    </footer>
 </body>
 </html>
