--- a/index.html
+++ b/index.html
@@ -68,5 +68,11 @@ Services
         </span>
     </footer>
 
+    <ul>
+        <li>Home</li>
+        <li>About Us</li>
+        <li>Contact Us</li>
+        <li>Services</li>
+    </ul>
 </body>
 </html>
