--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto dignissimos odio ab eveniet necessitatibus perspiciatis id doloribus? Nesciunt mollitia quaerat, minima reprehenderit libero quas aperiam!
+        Lorem ipsum dolor sit amet.
     </p>
 
 
