--- a/index.html
+++ b/index.html
@@ -1,79 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body{
-            text-align: center;
-        }
-        h1{
-            color: red;
-        }
-
-
-        ul{
-            display: flex;
-            justify-content: space-evenly;
-            color: green;
-            font-weight: 800;
-            font-size: larger;
-        }
-        p{
-            font-size: large;
-            color: aqua;
-            font-weight: 600;
-
-        }
-        footer{
-            display: flex;
-           gap: 10px;
-           justify-content: center;
-           font-size: large;
-           font-weight: bolder;
-           text-decoration: underline;
-
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <style>
+    body{
+      text-align:center ;
+    }
+  </style>
 </head>
 <body>
-<h1>Janera Production House</h1>
-
-    <ul>
-        <li>Home</li>
-        <li>About Us</li>
-        <li>Contact Us</li>
-        <li>Services</li>
-    </ul>
-
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto dignissimos odio ab eveniet necessitatibus perspiciatis id doloribus? Nesciunt mollitia quaerat, minima reprehenderit libero quas aperiam!
-        Lorem ipsum dolor sit amet.
-    </p>
-
-
-    <footer>
-        <span>
-            Home
-        </span>
-        <span>
-About Us
-        </span>
-        <span>
-Contact Us
-        </span>
-        <span>
-Services
-        </span>
-    </footer>
-
-    <ul>
-        <li>Home</li>
-        <li>About Us</li>
-        <li>Contact Us</li>
-        <li>Services</li>
-    </ul>
+  <p>Hello my name is Rajibul Islam</p>
 </body>
 </html>
